# ComputerGraphics

./: .gitignore  README.md
Lecture0/: Makefile  main.cpp
Lecture1/: main.cpp
Lecture2/: .gitignore  Makefile  combining.cpp  rotation.cpp  scale.cpp  translation.cpp  uniform_variables.cpp
Lecture3/: .gitignore  Makefile  indexed_draw.cpp  interpolation.cpp  projections.cpp
Lecture3/CleanUp/: CMakeLists.txt  main.cpp
Lecture3/CleanUp/include/: Shader.hpp  Window.hpp
Lecture4/Camera/: CMakeLists.txt  main.cpp
Lecture4/UserInput/: CMakeLists.txt  main.cpp
Lecture5/Textures/: CMakeLists.txt  main.cpp
Lecture6/AmbientLighting/: CMakeLists.txt  main.cpp
Lecture6/DiffuseLighting/: CMakeLists.txt  main.cpp
Lecture6/DirectionalLights/: CMakeLists.txt  main.cpp
Lecture6/ModelLoading/: CMakeLists.txt  main.cpp
Lecture6/PointLights/: CMakeLists.txt  main.cpp
Lecture6/SpecularLighting/: CMakeLists.txt  main.cpp
Lecture6/SpotLights/: CMakeLists.txt  main.cpp
Lecture7/DirectionalShadowMaps/: main.cpp
Lecture7/DirectionalShadowMaps-Basis/: CMakeLists.txt
Lecture7/DirectionalShadowMaps-Bias/: main.cpp
Lecture8/CubeMapsApplication/: CMakeLists.txt  main.cpp
Lecture8/CubeMapsCreation/: CMakeLists.txt  main.cpp
Lecture9/Skybox/: CMakeLists.txt  main.cpp
Lecture9/Skybox/include/: DirectionalLight.hpp  OmnidirectionalShadowMap.hpp  PointLight.hpp  SkyBox.hpp  SpotLight.hpp  Texture.hpp
Lecture9/Skybox/shaders/: shader.frag  skybox.frag  skybox.vert
Lecture9/Skybox/src/: PointLight.cpp  Shader.cpp  ShadowMap.cpp  SkyBox.cpp  SpotLight.cpp
(+101 files in other folders)
